--- a/SFML_app/SFML_app.vcxproj.filters
+++ b/SFML_app/SFML_app.vcxproj.filters
@@ -21,10 +21,16 @@
     <ClCompile Include="BusPoint.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Animation.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Animation.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="BusPoint.h">
-      <Filter>Source Files</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
